--- a/YokohamaTripDiagonosis/templates/diagnosis_top.html
+++ b/YokohamaTripDiagonosis/templates/diagnosis_top.html
@@ -1,10 +1,54 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8">
-        <title>はじめてのDjangoアプリ</title>
+        <meta charset="utf8">
+        <title>1分であなたのプランが分かる！日帰り横浜旅行プラン診断コンテンツ</title>
+        <meta name="dicription" content="あなたにぴったりな横浜旅行プランを1分でご提案します！">
+        <link rel="shortcut icon" href="..\static\favicon.ico">
+        <link rel="stylesheet" href="..\static\default.css">
+        <link rel="stylesheet" href="..\static\diagnosis_top.css">
+        <!-- Bootstrap -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        
+        <!-- django -->
+        <link rel="stylesheet" href="{% static 'app.css' %}">
     </head>
+
     <body>
-        <h1>Djangoで新しいページ作成</h1>
+        <header>
+            <div id="header">
+                <div id="header_img">
+                    <img src="..\static\byoutabi.png">
+                </div>
+                <div id="header_background">
+                </div>
+            </div>
+        </header>
+        <div class="body">
+        <h1>あなたにぴったりの日帰り横浜旅行プランを<br><p><span><strong>1分</strong></span>でご提案！</p></h1>
+        <div id="margin"></div>
+        <div class="imgline">
+            <div class="imgline_row0">
+                <img src="..\static\..\static\noimage.png">
+                <img src="..\static\noimage.png">
+                <img src="..\static\noimage.png">
+            </div>
+            <br>
+            <div class="imgline_row1">
+                <img src="..\static\noimage.png">
+                <img src="..\static\noimage.png">
+                <img src="..\static\noimage.png">
+            </div>
+        </div>
+        <br>
+        <form class="button" action="diagnosis.html">
+        <button type="submit" class="btn btn-outline-primary">今すぐ診断する</button>
+        </form>
+        <!-- Bootatrap -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+        </div>
     </body>
 </html>
