--- a/YokohamaTripDiagonosis/templates/result4.html
+++ b/YokohamaTripDiagonosis/templates/result4.html
@@ -1,8 +1,11 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
     <head>
         <meta charset="UTF-8">
         <title>はじめてのDjangoアプリ</title>
+        <!-- django -->
+        <link rel="stylesheet" href="{% static 'app.css' %}">
     </head>
     <body>
         <h1>Djangoで新しいページ作成</h1>
